deploying in k8s using helm

--- a/kubernates/deployment.yml
+++ b/kubernates/deployment.yml
@@ -2,7 +2,7 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
   name: go-order-app-deployment
-  namespace: order-app
+  namespace: nginx       # order-app
   labels:
     app: order-app
 spec:
