--- a/kubernates/service.yml
+++ b/kubernates/service.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: order-app-service
-  namespace: order-app
+  namespace: nginx       # order-app
 spec:
   selector:
     app: order-app
