--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.9'
 services:
   postgres:
     container_name: postgres-db
-    image: postgres:16
+    image: postgres:15-alpine
     environment:
       POSTGRES_USER: myuser
       POSTGRES_PASSWORD: password123
